--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "mdb-ui-kit": "^6.2.0",
     "ng-bootstrap-modal": "^1.1.19",
     "ngb-modal": "^2.0.3",
     "rxjs": "~7.8.0",
